[tool.poetry]
name = "reyes"
version = "0.1.0"
description = ""
authors = ["PeregHer <pereg.hergoualch@isen-ouest.yncrea.fr>"]

[tool.poetry.dependencies]
python = "^3.10"
tweepy = "^4.6.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
